--- a/app/src/main/res/layout/activity_search_movie.xml
+++ b/app/src/main/res/layout/activity_search_movie.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_search_movie"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:orientation="vertical"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="glassa.tacoma.uw.edu.moviesproject.SearchMovieActivity">
+    tools:context="glassa.tacoma.uw.edu.moviesproject.search.SearchMovieActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
 
 
-
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent">
-
-        <android.support.design.widget.CollapsingToolbarLayout
+        <EditText
+            android:layout_width="262dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/search_movie_bar"
+            android:hint="Search a user..." />
+        <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:toolbarId="@+id/toolbar"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:contentScrim="?attr/colorPrimary">
+            android:id="@+id/search_movie_button"
+            android:text="Search" />
+    </LinearLayout>
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent">
-                <include layout = "@layout/content_search"/>
-            </android.support.v7.widget.Toolbar>
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
-</RelativeLayout>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/listview_search_user"/>
+
+</LinearLayout>
