--- a/app/src/main/res/layout/content_follow_item.xml
+++ b/app/src/main/res/layout/content_follow_item.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/follow_item_frag_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -9,21 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="glassa.tacoma.uw.edu.moviesproject.TabHostActivity"
-    tools:showIn="@layout/activity_tab_host">
+    tools:context="glassa.tacoma.uw.edu.moviesproject.follow_item.FollowItemActivity"
+    tools:showIn="@layout/activity_follow_item">
 
-    <android.support.v7.widget.SearchView
-        android:id="@+id/search_view"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-
-        app:defaultQueryHint="Search..">
-
-    </android.support.v7.widget.SearchView>
-    <ListView
-        android:id="@+id/list_view"
-        android:layout_width="match_parent"
-        android:layout_below="@+id/search_view"
-        android:layout_height="match_parent">
-    </ListView>
 </RelativeLayout>
