--- a/app/src/main/res/layout/fragment_tab1_home.xml
+++ b/app/src/main/res/layout/fragment_tab1_home.xml
@@ -1,76 +1,117 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/hometabhost"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="glassa.tacoma.uw.edu.moviesproject.Tab1Home">
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="460dp">
+        android:layout_height="930px">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="User Feed:"/>
 
-        <LinearLayout
-            android:orientation="vertical"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingTop="20dp"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
+            android:paddingBottom="20dp">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Alex rated The Matrix"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Alex rated The Truman Show"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Alex rated A Bug's Life"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Alex rated The Avengers"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tony rated The Matrix"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tony rated The Truman Show"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tony rated A Bug's Life"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tony rated The Avengers"
-                />
-        </LinearLayout>
+                android:orientation="vertical" >
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Alex rated The Matrix"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Alex rated The Truman Show"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Alex rated A Bug's Life"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Alex rated The Avengers"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Tony rated The Matrix"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Tony rated The Truman Show"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Tony rated A Bug's Life"
+                    />
+
+                    />
+            </LinearLayout>
+        </ScrollView>
 
     </FrameLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center">
 
         <Button
+            android:id="@+id/followers_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Followers"/>
+            android:text="Followers"
+            android:gravity="bottom"
+            android:onClick="viewFollowingUsers"/>
         <Button
+            android:id="@+id/following_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Following"/>
+            android:text="Following"
+            android:gravity="bottom"
+            android:onClick="viewUsersImFollowing"/>
 
         <Button
+            android:id="@+id/ratings_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ratings"/>
+            android:text="Ratings"
+            android:gravity="bottom"
+            android:onClick="viewRatedMovies"/>
+
+        <Button
+            android:id="@+id/logout_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Logout" />
+
+        <!--<Button-->
+            <!--android:text="Logout"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/logout_button"-->
+            <!--android:layout_weight="1"-->
+            <!--android:onClick="logout"/>-->
 
     </LinearLayout>
 
