--- a/app/src/main/res/layout/fragment_tab5_settings.xml
+++ b/app/src/main/res/layout/fragment_tab5_settings.xml
@@ -1,13 +1,22 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/setting_fragment"
     tools:context="glassa.tacoma.uw.edu.moviesproject.Tab5Settings">
-
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/tab5_string" />
 
-</FrameLayout>
+    <!--<Button-->
+        <!--android:id="@+id/logout_button"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Logout"-->
+        <!--/>-->
+
+
+</LinearLayout>
