--- a/app/src/main/res/layout/fragment_tab3_find_movies.xml
+++ b/app/src/main/res/layout/fragment_tab3_find_movies.xml
@@ -20,7 +20,7 @@
             />
         <Button
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight=".5"
             android:id="@+id/search_movie_button"
             android:text="Search" />
